--- a/ManagerApplication/ManagerApplication/ManageProductsUI.xaml
+++ b/ManagerApplication/ManagerApplication/ManageProductsUI.xaml
@@ -20,8 +20,8 @@
         <local:ProductSearch x:Name="ProductSearch" Grid.Row="0" Grid.Column="0"/>
         <DataGrid Name="ListProducts" SelectionChanged="ListProducts_OnSelectionChanged" AutoGenerateColumns="False" Grid.Row="1" Grid.Column="0">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Number" Binding="{Binding Number, Mode=TwoWay}" />
-                <DataGridTextColumn Header="Name" Binding="{Binding Name, Mode=TwoWay}" />
+                <DataGridTextColumn Header="Number" Binding="{Binding Number, Mode=TwoWay}" Width="75"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name, Mode=TwoWay}" Width="*" />
             </DataGrid.Columns>
         </DataGrid>
         <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
@@ -37,6 +37,6 @@
             </Button>
         </Grid>
         <GridSplitter Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" HorizontalAlignment="Stretch" Background="DarkGray"/>
-        <local:ProductUI x:Name="ProductUi" Grid.Row="0" Grid.RowSpan="2" Grid.Column="2"/>
+        <local:ProductUI x:Name="ProductUi" Grid.Row="0" Grid.RowSpan="3" Grid.Column="2"/>
     </Grid>
 </UserControl>
