--- a/ManagerApplication/ManagerApplication/ProductUI.xaml
+++ b/ManagerApplication/ManagerApplication/ProductUI.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ManagerApplication"
+             xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.DataContext>
+        <vm:Product/>
+    </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -34,10 +38,10 @@
         <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Price}"></TextBox>
 
         <Label Grid.Row="4" Grid.Column="0">Category</Label>
-        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Category}"></TextBox>
+        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding CategoryId}"></TextBox>
 
         <Label Grid.Row="5" Grid.Column="0">Supplier</Label>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Supplier}"></TextBox>
+        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SupplierId}"></TextBox>
 
         <Label Grid.Row="6" Grid.Column="0">Description</Label>
         <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding Description}"></TextBox>
