--- a/ManagerApplication/ManagerApplication/ProductUI.xaml
+++ b/ManagerApplication/ManagerApplication/ProductUI.xaml
@@ -2,17 +2,19 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ManagerApplication"
-             xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
+             xmlns:converter="clr-namespace:ManagerApplication.Converter"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <converter:CategoryIdToNameConverter x:Key="CategoryConverter"/>
+    </UserControl.Resources>
     <UserControl.DataContext>
-        <vm:Product/>
+        <viewModel:Product/>
     </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
@@ -26,27 +28,24 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" Grid.Column="0">ID</Label>
-        <TextBox Grid.Row="0" Grid.Column="1" IsEnabled="False" Text="{Binding Id, Mode=OneWay}"></TextBox>
+        <TextBox Grid.Row="0" Grid.Column="1" IsEnabled="False" Text="{Binding Id, Mode=OneWay}"/>
 
-        <Label Grid.Row="1" Grid.Column="0">Number</Label>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Number}"></TextBox>
+        <Label Grid.Row="1" Grid.Column="0" FontWeight="Bold">Number</Label>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Number}"/>
 
-        <Label Grid.Row="2" Grid.Column="0">Name</Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Name}"></TextBox>
+        <Label Grid.Row="2" Grid.Column="0" FontWeight="Bold">Name</Label>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Name}"/>
 
         <Label Grid.Row="3" Grid.Column="0">Price</Label>
-        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Price}"></TextBox>
+        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Price}"/>
 
         <Label Grid.Row="4" Grid.Column="0">Category</Label>
-        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding CategoryId}"></TextBox>
+        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding CategoryId, Converter={StaticResource CategoryConverter}}" IsEnabled="False"/>
 
-        <Label Grid.Row="5" Grid.Column="0">Supplier</Label>
-        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SupplierId}"></TextBox>
+        <Label Grid.Row="5" Grid.Column="0">Description</Label>
+        <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Description}"/>
 
-        <Label Grid.Row="6" Grid.Column="0">Description</Label>
-        <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding Description}"></TextBox>
-
-        <Button Name="ButtonSave" Click="ButtonSave_OnClick" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2">
+        <Button Name="ButtonSave" Command="{Binding SaveProductToDb}" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2">
             <TextBlock FontSize="14">Save all Changes</TextBlock>
             <Button.Background>DarkSeaGreen</Button.Background>
         </Button>
